# trading-buddy-2.0

./: .dockerignore  .gitignore  .gitignore copy  .gitlab-ci.yml  04-secret.example.yaml  Makefile  README.md  backup.Dockerfile  backup.env  commands.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.Dockerfile  nginx.conf
bingX/: _http_manager.py
trading_buddy_backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.old  README.md  db.sqlite3  docker-compose.yml  logs  manage.py  pyproject.toml  requirements.txt
trading_buddy_backend/bingX/: _http_manager.py
trading_buddy_backend/trading_buddy/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
trading_buddy_backend/trading_buddy/migrations/: 0001_initial.py  0002_alter_position_last_status.py  0002_position_server_position_id.py  0002_remove_user_available_margin_and_more.py  0003_alter_trade_commission_usd_alter_trade_pnl_usd.py  0003_remove_account_available_margin_remove_user_risk_and_more.py  0003_rename_current_volume_position_max_held_volume.py  0004_position_current_volume.py  0004_user_current_account.py  0005_alter_account_api_key_alter_account_secret_key_and_more.py  0005_alter_position_commission_usd.py  0006_alter_position_commission_usd.py  0006_alter_position_start_time_alter_trade_start_time.py  0007_position_move_stop_after_rr_alter_trade_risk_usd.py  0008_trade_tags_trade_trade_setup_and_more.py  0009_remove_trade_tags_alter_account_exchange.py
trading_buddy_backend/trading_buddy_backend/: asgi.py  logging_config.py  settings.py  urls.py  wsgi.py
(+94 files in other folders)
