[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksandr Shestakov",email = "103767386+avtorgenii@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "websocket-client (>=1.8.0,<2.0.0)",
    "drf-spectacular[sidecar] (>=0.28.0,<0.29.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "django-allauth (>=65.9.0,<66.0.0)",
    "dj-rest-auth (>=7.0.1,<8.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "pyjwt (>=2.4.0,<3.0.0)",
    "cryptography (>=45.0.4,<46.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

